// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render basic component should check snapshot with Avatar props with add button 1`] = `
<div>
  <div
    class="stack"
  >
    <div
      class="stackAvatar Avatar contentStyle"
    >
      <div
        class="AvatarInner"
        style="border-radius: 100%; line-height: 32px; width: 32px; height: 32px; font-size: 10px;"
      >
        +
      </div>
    </div>
    <div
      class="stackAvatar Avatar contentStyle"
    >
      <span
        class="bp3-popover-wrapper"
      >
        <span
          class="bp3-popover-target"
        >
          <div
            class="AvatarInner"
            style="border-radius: 100%; line-height: 32px; width: 32px; height: 32px; font-size: 10px;"
            tabindex="0"
          >
            <img
              alt=""
              class="imageStyle"
              src="https://image.shutterstock.com/image-photo/buddha-statue-hyderabadhyderabadindia-260nw-1366155431.jpg"
              style="border-radius: 100%; line-height: 32px; width: 32px; height: 32px; font-size: 10px;"
            />
          </div>
        </span>
      </span>
    </div>
    <div
      class="stackAvatar Avatar contentStyle"
    >
      <span
        class="bp3-popover-wrapper"
      >
        <span
          class="bp3-popover-target"
        >
          <div
            class="AvatarInner"
            style="border-radius: 100%; line-height: 32px; width: 32px; height: 32px; font-size: 10px;"
            tabindex="0"
          >
            GH
          </div>
        </span>
      </span>
    </div>
    <div
      class="stackAvatar Avatar contentStyle"
    >
      <span
        class="bp3-popover-wrapper"
      >
        <span
          class="bp3-popover-target"
        >
          <div
            class="AvatarInner"
            style="border-radius: 100%; line-height: 32px; width: 32px; height: 32px; font-size: 10px;"
            tabindex="0"
          >
            EF
          </div>
        </span>
      </span>
    </div>
    <div
      class="stackAvatar Avatar contentStyle"
    >
      <span
        class="bp3-popover-wrapper"
      >
        <span
          class="bp3-popover-target"
        >
          <div
            class="AvatarInner"
            style="border-radius: 100%; line-height: 32px; width: 32px; height: 32px; font-size: 10px;"
            tabindex="0"
          >
            CH
          </div>
        </span>
      </span>
    </div>
    <div
      class="stackAvatar Avatar contentStyle"
    >
      <span
        class="bp3-popover-wrapper"
      >
        <span
          class="bp3-popover-target"
        >
          <div
            class="AvatarInner"
            style="border-radius: 100%; line-height: 32px; width: 32px; height: 32px; font-size: 10px;"
            tabindex="0"
          >
            AS
          </div>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Render basic component should check snapshot with Avatar props without add button 1`] = `
<div>
  <div
    class="stack"
  >
    <div
      class="stackAvatar Avatar contentStyle"
    >
      <span
        class="bp3-popover-wrapper"
      >
        <span
          class="bp3-popover-target"
        >
          <div
            class="AvatarInner"
            style="border-radius: 100%; line-height: 32px; width: 32px; height: 32px; font-size: 10px;"
            tabindex="0"
          >
            <img
              alt=""
              class="imageStyle"
              src="https://image.shutterstock.com/image-photo/buddha-statue-hyderabadhyderabadindia-260nw-1366155431.jpg"
              style="border-radius: 100%; line-height: 32px; width: 32px; height: 32px; font-size: 10px;"
            />
          </div>
        </span>
      </span>
    </div>
    <div
      class="stackAvatar Avatar contentStyle"
    >
      <span
        class="bp3-popover-wrapper"
      >
        <span
          class="bp3-popover-target"
        >
          <div
            class="AvatarInner"
            style="border-radius: 100%; line-height: 32px; width: 32px; height: 32px; font-size: 10px;"
            tabindex="0"
          >
            GH
          </div>
        </span>
      </span>
    </div>
    <div
      class="stackAvatar Avatar contentStyle"
    >
      <span
        class="bp3-popover-wrapper"
      >
        <span
          class="bp3-popover-target"
        >
          <div
            class="AvatarInner"
            style="border-radius: 100%; line-height: 32px; width: 32px; height: 32px; font-size: 10px;"
            tabindex="0"
          >
            E
          </div>
        </span>
      </span>
    </div>
    <div
      class="stackAvatar Avatar contentStyle"
    >
      <span
        class="bp3-popover-wrapper"
      >
        <span
          class="bp3-popover-target"
        >
          <div
            class="AvatarInner"
            style="border-radius: 100%; line-height: 32px; width: 32px; height: 32px; font-size: 10px;"
            tabindex="0"
          >
            CH
          </div>
        </span>
      </span>
    </div>
    <div
      class="stackAvatar Avatar contentStyle"
    >
      <span
        class="bp3-popover-wrapper"
      >
        <span
          class="bp3-popover-target"
        >
          <div
            class="AvatarInner"
            style="border-radius: 100%; line-height: 32px; width: 32px; height: 32px; font-size: 10px;"
            tabindex="0"
          >
            AS
          </div>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Render basic component should check snapshot with Avatar props without overlap 1`] = `
<div>
  <div
    class="noStack"
  >
    <div
      class="Avatar contentStyle"
    >
      <span
        class="bp3-popover-wrapper"
      >
        <span
          class="bp3-popover-target"
        >
          <div
            class="AvatarInner"
            style="border-radius: 100%; line-height: 32px; width: 32px; height: 32px; font-size: 10px;"
            tabindex="0"
          >
            AS
          </div>
        </span>
      </span>
    </div>
    <div
      class="Avatar contentStyle"
    >
      <span
        class="bp3-popover-wrapper"
      >
        <span
          class="bp3-popover-target"
        >
          <div
            class="AvatarInner"
            style="border-radius: 100%; line-height: 32px; width: 32px; height: 32px; font-size: 10px;"
            tabindex="0"
          >
            CH
          </div>
        </span>
      </span>
    </div>
    <div
      class="Avatar contentStyle"
    >
      <span
        class="bp3-popover-wrapper"
      >
        <span
          class="bp3-popover-target"
        >
          <div
            class="AvatarInner"
            style="border-radius: 100%; line-height: 32px; width: 32px; height: 32px; font-size: 10px;"
            tabindex="0"
          >
            E
          </div>
        </span>
      </span>
    </div>
    <div
      class="Avatar contentStyle"
    >
      <span
        class="bp3-popover-wrapper"
      >
        <span
          class="bp3-popover-target"
        >
          <div
            class="AvatarInner"
            style="border-radius: 100%; line-height: 32px; width: 32px; height: 32px; font-size: 10px;"
            tabindex="0"
          >
            GH
          </div>
        </span>
      </span>
    </div>
    <div
      class="Avatar contentStyle"
    >
      <span
        class="bp3-popover-wrapper"
      >
        <span
          class="bp3-popover-target"
        >
          <div
            class="AvatarInner"
            style="border-radius: 100%; line-height: 32px; width: 32px; height: 32px; font-size: 10px;"
            tabindex="0"
          >
            <img
              alt=""
              class="imageStyle"
              src="https://image.shutterstock.com/image-photo/buddha-statue-hyderabadhyderabadindia-260nw-1366155431.jpg"
              style="border-radius: 100%; line-height: 32px; width: 32px; height: 32px; font-size: 10px;"
            />
          </div>
        </span>
      </span>
    </div>
  </div>
</div>
`;
